--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -77,8 +77,8 @@
 									<td th:text="${emp.department.departmentName}"></td>
 									<td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm')}"></td>
 									<td>
-										<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
-										<a class="btn btn-sm btn-danger">删除</a>
+                                        <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
+                                        <button th:attr="del_uri=@{/emp/}+${emp.id}" class="btn btn-sm btn-danger deleteBtn">删除</button>
 									</td>
 								</tr>
 							</tbody>
@@ -86,6 +86,10 @@
 						</table>
 					</div>
 				</main>
+
+                <form id="deleteEmpForm"  method="post">
+                    <input type="hidden" name="_method" value="delete"/>
+                </form>
 			</div>
 		</div>
 
@@ -104,7 +108,15 @@
 
 		<!-- Graphs -->
 		<script type="text/javascript" src="asserts/js/Chart.min.js" th:src="@{/asserts/js/Chart.min.js}"></script>
-		<script>
+        <script>
+            $(".deleteBtn").click(function(){
+                //删除当前员工的
+                $("#deleteEmpForm").attr("action",$(this).attr("del_uri")).submit();
+                return false;
+            });
+        </script>
+
+        <script>
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
 				type: 'line',
@@ -133,6 +145,7 @@
 				}
 			});
 		</script>
+
 
 	</body>
 
